@@ -1,6 +1,9 @@
 package org.iptime.yoon.blog.security.config;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.iptime.yoon.blog.dto.res.ErrorResDto;
 import org.iptime.yoon.blog.security.filter.JwtRefreshFilter;
 import org.iptime.yoon.blog.security.repository.BlogUserRepository;
 import org.iptime.yoon.blog.security.filter.JwtAuthenticationFilter;
@@ -11,6 +14,7 @@ import org.iptime.yoon.blog.security.service.RefreshTokenService;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.MediaType;
 import org.springframework.security.access.hierarchicalroles.RoleHierarchy;
 import org.springframework.security.access.hierarchicalroles.RoleHierarchyImpl;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -44,29 +48,32 @@ import java.util.List;
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
-public class SecurityConfig{
+public class SecurityConfig {
     @Value("${spring.security.debug:false}") // :기본값
     boolean securityDebug;
 
     private final BlogUserRepository blogUserRepository;
     private final AuthenticationConfiguration authConfig;
     private final JwtManager jwtManager;
+    private final ObjectMapper objectMapper;
 
     private final RefreshTokenService refreshTokenService;
 
     @Bean
-    PasswordEncoder passwordEncoder(){
+    PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
-    }
-    @Bean
-    BlogUserServiceImpl blogUserService(){
-        return  new BlogUserServiceImpl(blogUserRepository, passwordEncoder());
     }
 
     @Bean
-    public WebSecurityCustomizer webSecurityCustomizer(){
-        return (web)-> web.debug(securityDebug);
+    BlogUserServiceImpl blogUserService() {
+        return new BlogUserServiceImpl(blogUserRepository, passwordEncoder());
     }
+
+    @Bean
+    public WebSecurityCustomizer webSecurityCustomizer() {
+        return (web) -> web.debug(securityDebug);
+    }
+
     @Bean
     public AuthenticationManager authenticationManager() throws Exception {
         return authConfig.getAuthenticationManager();
@@ -82,50 +89,79 @@ public class SecurityConfig{
 
     @Bean
     public JwtLoginFilter jwtSignInFilter() throws Exception {
-        return  new JwtLoginFilter("/auth/log-in",authenticationManager(), jwtManager,refreshTokenService);
+        return new JwtLoginFilter("/auth/log-in", authenticationManager(), jwtManager, refreshTokenService);
     }
 
     @Bean
-    public JwtAuthenticationFilter jwtAuthenticationFilter(){
+    public JwtAuthenticationFilter jwtAuthenticationFilter() {
         return new JwtAuthenticationFilter(jwtManager);
     }
 
     @Bean
-    public JwtRefreshFilter jwtRefreshFilter(){
-        return new JwtRefreshFilter("/refresh",refreshTokenService, jwtManager);
+    public JwtRefreshFilter jwtRefreshFilter() {
+        return new JwtRefreshFilter("/refresh", refreshTokenService, jwtManager);
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         final var configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3306"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","OPTIONS"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
+        // configuration.setAllowCredentials(true);
 
         final var source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
         return source;
     }
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()));
         http.csrf(AbstractHttpConfigurer::disable);
-        http.sessionManagement(man->man.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        http.sessionManagement(man -> man.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
         http.httpBasic(Customizer.withDefaults());
         http.addFilterBefore(jwtRefreshFilter(), BasicAuthenticationFilter.class);
         http.addFilterAt(jwtAuthenticationFilter(), BasicAuthenticationFilter.class);
         http.addFilterAt(jwtSignInFilter(), UsernamePasswordAuthenticationFilter.class);
-        http.authorizeHttpRequests((auth)->
+        http.authorizeHttpRequests((auth) ->
             auth.requestMatchers(new AntPathRequestMatcher("/auth/**"), new AntPathRequestMatcher("/health")).permitAll()
                 .anyRequest().authenticated());
-        return  http.build();
+
+        http.exceptionHandling(
+            config -> {
+                config.authenticationEntryPoint((request, response, authException) -> {
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    ErrorResDto error = ErrorResDto.builder()
+                        .status(HttpServletResponse.SC_UNAUTHORIZED)
+                        .message("Unauthorized Request")
+                        .exception(authException)
+                        .build();
+                    response.getWriter().write(objectMapper.writeValueAsString(error));
+                    response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+
+                });
+                config.accessDeniedHandler((request,response,accessDeniedException)->{
+                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                    ErrorResDto error = ErrorResDto.builder()
+                        .status(HttpServletResponse.SC_FORBIDDEN)
+                        .message("Forbidden Request")
+                        .exception(accessDeniedException)
+                        .build();
+                    response.getWriter().write(objectMapper.writeValueAsString(error));
+                    response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+                });
+            }
+
+
+        );
+        return http.build();
     }
 
     @Bean
-    RoleHierarchy roleHierarchy(){
+    RoleHierarchy roleHierarchy() {
         RoleHierarchyImpl roleHierarchy = new RoleHierarchyImpl();
         roleHierarchy.setHierarchy("ROLE_ADMIN > ROLE_MANAGER > ROLE_USER");
         return roleHierarchy;
